--- a/templates/created.html
+++ b/templates/created.html
@@ -2,11 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Кек</title>
+		<title>Добавлено</title>
 	</head>
 	<body>
 		<h3>
-			Добавлено
+			Приложение успешно Добавлено
+			<br />
+			Идентификатор приложения: {{ appID }}
 		</h3>
 	</body>
 </html>
