Работает навигация и просмотр списка

--- a/templates/formCreate.html
+++ b/templates/formCreate.html
@@ -9,15 +9,16 @@
 		<title>Добавление приложения</title>
 	</head>
 	<body>
-		<!--<form action="createSave" method="POST">
-    <div>
-        Наименование
-        <input type="text" name="nazv" />
-    </div>
-		<input type="submit" value="Сохранить" />
-    </form>
-	-->
   <div style="width: 30%; padding: 10px;min-width: 300px;">
+    <h3>
+      Портал СРП
+    </h3>
+    <h4>
+      Добавление приложения
+    </h4>
+    <div style="padding-bottom: 10px; padding-top: 10px;">
+      <a class="btn btn-primary" href="/" role="button">На главную</a>
+    </div>
 	<form action="createSave" method="POST">
   <div class="form-group">
     <label for="appName">Наименование приложения</label>
