--- a/templates/getApp.html
+++ b/templates/getApp.html
@@ -10,6 +10,15 @@
 	</head>
 	<body>
 		<div style="width: 30%; padding: 10px;min-width: 300px;">
+			<h3>
+				Портал СРП
+			  </h3>
+			  <h4>
+				Просмотр приложения
+			  </h4>
+			  <div style="padding-bottom: 10px; padding-top: 10px;">
+                <a class="btn btn-primary" href="/" role="button">На главную</a>
+            </div>
 			<form>
 				<div class="form-group">
 					<label for="appID">Идентификатор приложения</label>
@@ -152,6 +161,10 @@
 						{% endif %}
 					</select>
 				</div>
+				<div class="form-group">
+					Для разработчиков
+				  </div>
+				<button type="submit" class="btn btn-primary">Изменить приложение</button>
 			</form>
 		</div>
 	</body>
