--- a/templates/formCreate.html
+++ b/templates/formCreate.html
@@ -21,9 +21,9 @@
     </div>
 	<form action="createSave" method="POST">
   <div class="form-group">
-    <label for="appName">Наименование приложения</label>
-    <input name="name" type="text" class="form-control" id="appName" aria-describedby="appNameText" placeholder="Введите наименование">
-    <small id="appNameText" class="form-text text-muted">Поле не может быть пустым</small>
+    <label for="name">Наименование приложения</label>
+    <input name="name" type="text" class="form-control" id="name" aria-describedby="nameText" placeholder="Введите наименование">
+    <small id="nameText" class="form-text text-muted">Поле не может быть пустым</small>
   </div>
   <div class="form-group">
     <label for="appDesc">Описание приложения</label>
