--- a/templates/saveError.html
+++ b/templates/saveError.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>Ошибка добавления</title>
+		<title>Ошибка сохранения</title>
 	</head>
 	<body>
 		<h3>
 			Портал СРП
 		  </h3>
 		  <h4>
-			Ошибка добавления!
+			Ошибка сохранения!
 		  </h4>
 		  <div style="padding-bottom: 10px; padding-top: 10px;">
 			<a class="btn btn-primary" href="/" role="button">На главную</a>
