Разработчик может сгенерировать новый секретный ключ

--- a/templates/formCreate.html
+++ b/templates/formCreate.html
@@ -54,7 +54,7 @@
 	  <small id="deleteText" class="form-text text-muted">Удаление файла по его абсолютному пути</small>
   </div>
   <div class="form-group">
-    <label for="appPassword">Пароль администратора приложения</label>
+    <label for="appPassword">Пароль разработчика приложения</label>
     <input name="appPassword" type="password" class="form-control" id="appPassword" aria-describedby="appPasswordText" placeholder="Введите пароль">
     <small id="appPasswordText" class="form-text text-muted">Минимум 10 символов</small>
   </div>
