--- a/templates/getApp.html
+++ b/templates/getApp.html
@@ -162,9 +162,9 @@
 					</select>
 				</div>
 				<div class="form-group">
-					Для разработчиков
-				  </div>
-				<button type="submit" class="btn btn-primary">Изменить приложение</button>
+					Для разработчика
+				</div>
+				<a class="btn btn-primary" href="/devApp?id={{ appObject._id }}" role="button">Управление приложением</a>
 			</form>
 		</div>
 	</body>
