Теперь отображаются данные разработчика и дата регистрации

--- a/templates/formCreate.html
+++ b/templates/formCreate.html
@@ -26,6 +26,16 @@
     <small id="nameText" class="form-text text-muted">Поле не может быть пустым</small>
   </div>
   <div class="form-group">
+    <label for="devName">Наименование разработчика</label>
+    <input name="devName" type="text" class="form-control" id="devName" aria-describedby="devNameText" placeholder="Введите наименование">
+    <small id="devNameText" class="form-text text-muted">Поле не может быть пустым</small>
+  </div>
+  <div class="form-group">
+    <label for="email">E-mail разработчика</label>
+    <input name="email" type="email" class="form-control" id="email" aria-describedby="emailText" placeholder="Введите e-mail">
+    <small id="emailText" class="form-text text-muted">Поле не может быть пустым</small>
+  </div>
+  <div class="form-group">
     <label for="appDesc">Описание приложения</label>
     <textarea name="desc" class="form-control" id="appDesc" rows="3" aria-describedby="appDescText" placeholder="Введите описание"></textarea>
     <small id="appDescText" class="form-text text-muted">Администрация принимает решения об одобрении приложения на основании его названия и описания</small>
