--- a/templates/adminApp.html
+++ b/templates/adminApp.html
@@ -30,9 +30,21 @@
 					<input name="name" type="text" class="form-control" id="name" placeholder="Введите наименование" value="{{ appObject.name }}">
 				</div>
 				<div class="form-group">
+					<label for="devName">Наименование разработчика</label>
+					<input name="devName" type="text" class="form-control" id="devName" aria-describedby="devNameText" value="{{ appObject.devName }}">
+				  </div>
+				  <div class="form-group">
+					<label for="email">E-mail разработчика</label>
+					<input name="email" type="email" class="form-control" id="email" aria-describedby="emailText" value="{{ appObject.email }}">
+				  </div>
+				<div class="form-group">
 					<label for="appDesc">Описание приложения</label>
 					<textarea name="desc" class="form-control" id="appDesc" rows="3" placeholder="Введите описание">{{ appObject.desc }}</textarea>
 				</div>
+				<div class="form-group">
+					<label for="date">Дата регистрации (UTC)</label>
+					<input disabled name="date" type="text" class="form-control" id="date" value="{{ appObject.date }}">
+				  </div>
 				<div class="form-group">
 					<label for="spisok">Список файлов</label>
 					<select name="spisok" id="spisok">
