--- a/templates/secretKey.html
+++ b/templates/secretKey.html
@@ -31,7 +31,7 @@
 					<small id="secretKeyText" class="form-text text-muted">Сохраните его для работы с системой</small>
 				</div>
                 <div class="form-group">
-                    <a class="btn btn-primary" href="/" role="button">К приложению</a>
+                    <a class="btn btn-primary" href="/getApp?id={{ appObject._id }}" role="button">К приложению</a>
                 </div>
             </form>
         </div>
