Разработчик может менять пароль приложения

--- a/templates/devApp.html
+++ b/templates/devApp.html
@@ -44,7 +44,7 @@
 				</div>
 				<button type="submit" class="btn btn-warning">Сгенерировать новый секретный ключ</button>
 			</form>
-            <form method="POST" action="devNewKey" style="padding-top: 10px;">
+            <form method="POST" action="devChangePassword" style="padding-top: 10px;">
 				<div class="form-group">
 					<b>Изменение пароля разработчика</b>
 				</div>
