Теперь список сортируется от новых к старым

--- a/templates/formCreate.html
+++ b/templates/formCreate.html
@@ -22,7 +22,7 @@
 	<form action="createSave" method="POST">
   <div class="form-group">
     <label for="name">Наименование приложения</label>
-    <input name="name" type="text" class="form-control" id="name" aria-describedby="nameText" placeholder="Введите наименование">
+    <input name="name" type="text" class="form-control" id="name" minlength="1" aria-describedby="nameText" placeholder="Введите наименование">
     <small id="nameText" class="form-text text-muted">Поле не может быть пустым</small>
   </div>
   <div class="form-group">
