--- a/templates/formCreate.html
+++ b/templates/formCreate.html
@@ -22,22 +22,22 @@
 	<form action="createSave" method="POST">
   <div class="form-group">
     <label for="name">Наименование приложения</label>
-    <input name="name" type="text" class="form-control" id="name" minlength="1" aria-describedby="nameText" placeholder="Введите наименование">
+    <input required minlength="1" name="name" type="text" class="form-control" id="name" aria-describedby="nameText" placeholder="Введите наименование">
     <small id="nameText" class="form-text text-muted">Поле не может быть пустым</small>
   </div>
   <div class="form-group">
     <label for="devName">Наименование разработчика</label>
-    <input name="devName" type="text" class="form-control" id="devName" aria-describedby="devNameText" placeholder="Введите наименование">
+    <input required minlength="1" name="devName" type="text" class="form-control" id="devName" aria-describedby="devNameText" placeholder="Введите наименование">
     <small id="devNameText" class="form-text text-muted">Поле не может быть пустым</small>
   </div>
   <div class="form-group">
     <label for="email">E-mail разработчика</label>
-    <input name="email" type="email" class="form-control" id="email" aria-describedby="emailText" placeholder="Введите e-mail">
+    <input required minlength="1" name="email" type="email" class="form-control" id="email" aria-describedby="emailText" placeholder="Введите e-mail">
     <small id="emailText" class="form-text text-muted">Поле не может быть пустым</small>
   </div>
   <div class="form-group">
     <label for="appDesc">Описание приложения</label>
-    <textarea name="desc" class="form-control" id="appDesc" rows="3" aria-describedby="appDescText" placeholder="Введите описание"></textarea>
+    <textarea required minlength="1" name="desc" class="form-control" id="appDesc" rows="3" aria-describedby="appDescText" placeholder="Введите описание"></textarea>
     <small id="appDescText" class="form-text text-muted">Администрация принимает решения об одобрении приложения на основании его названия и описания</small>
   </div>
   <div class="form-group">
@@ -65,7 +65,7 @@
   </div>
   <div class="form-group">
     <label for="appPassword">Пароль разработчика приложения</label>
-    <input name="appPassword" type="password" class="form-control" id="appPassword" aria-describedby="appPasswordText" placeholder="Введите пароль">
+    <input required minlength="10" name="appPassword" type="password" class="form-control" id="appPassword" aria-describedby="appPasswordText" placeholder="Введите пароль">
     <small id="appPasswordText" class="form-text text-muted">Минимум 10 символов</small>
   </div>
   <button type="submit" class="btn btn-primary">Добавить приложение</button>
