--- a/Portal SRP/templates/adminApp.html
+++ b/Portal SRP/templates/adminApp.html
@@ -39,7 +39,7 @@
 				  </div>
 				<div class="form-group">
 					<label for="appDesc">Описание приложения</label>
-					<textarea required minlength="1" name="desc" class="form-control" id="appDesc" rows="3" placeholder="Введите описание">{{ appObject.desc }}</textarea>
+					<textarea required minlength="1" name="appDesc" class="form-control" id="appDesc" rows="3" placeholder="Введите описание">{{ appObject.desc }}</textarea>
 				</div>
 				<div class="form-group">
 					<label for="date">Дата регистрации (UTC)</label>
