Добавлено поле адреса приложения

--- a/Notepad/templates/notepad.html
+++ b/Notepad/templates/notepad.html
@@ -15,7 +15,7 @@
               Блокнот
             </h3>
             <h5>
-                <a href="#">Информация о приложении на Портале СРП</a>
+                <a href="http://localhost:49051/getApp?id=608f1351b59c6f34109189d9">Информация о приложении на Портале СРП</a>
             </h5>
             <form id="bForm" onsubmit="formSubmit(this);return false">
                 <div class="form-group">
