--- a/Portal SRP/templates/formCreate.html
+++ b/Portal SRP/templates/formCreate.html
@@ -36,6 +36,11 @@
     <small id="emailText" class="form-text text-muted">Поле не может быть пустым</small>
   </div>
   <div class="form-group">
+    <label for="appSite">Ссылка на приложение</label>
+    <input required minlength="1" name="appSite" type="url" class="form-control" id="appSite" aria-describedby="appSiteText">
+    <small id="appSiteText" class="form-text text-muted">Поле не может быть пустым</small>
+  </div>
+  <div class="form-group">
     <label for="appDesc">Описание приложения</label>
     <textarea required minlength="1" name="desc" class="form-control" id="appDesc" rows="3" aria-describedby="appDescText" placeholder="Введите описание"></textarea>
     <small id="appDescText" class="form-text text-muted">Администрация принимает решения об одобрении приложения на основании его названия и описания</small>
