--- a/Portal SRP/templates/adminApp.html
+++ b/Portal SRP/templates/adminApp.html
@@ -38,6 +38,10 @@
 					<input required name="email" type="email" class="form-control" id="email" aria-describedby="emailText" value="{{ appObject.email }}">
 				  </div>
 				<div class="form-group">
+					<label for="appSite">Ссылка на приложение</label>
+					<input required minlength="1" name="appSite" type="url" class="form-control" id="appSite" aria-describedby="appSiteText" value="{{ appObject.appSite }}">
+				</div>
+				<div class="form-group">
 					<label for="appDesc">Описание приложения</label>
 					<textarea required minlength="1" name="appDesc" class="form-control" id="appDesc" rows="3" placeholder="Введите описание">{{ appObject.desc }}</textarea>
 				</div>
